🐞 List layout issues
Parent issue: https://github.com/sequentech/meta/issues/276

--- a/avBooth/simultaneous-question-answer-v2-directive/simultaneous-question-answer-v2-directive.less
+++ b/avBooth/simultaneous-question-answer-v2-directive/simultaneous-question-answer-v2-directive.less
@@ -221,8 +221,7 @@
   
   .vertilize-col.answer-glyphicon {
     display: flex;
-    flex-basis: 100%;
-    max-width: 26%;
+    flex-grow: 0;
     justify-content: flex-end;
     flex-wrap: wrap;
     align-items: center;
