--- a/avBooth/simultaneous-questions-category-v2-directive/simultaneous-questions-category-v2-directive.less
+++ b/avBooth/simultaneous-questions-category-v2-directive/simultaneous-questions-category-v2-directive.less
@@ -54,7 +54,7 @@
     .category-heading {
         margin-top: 10px;
         margin-bottom: 26px;
-        flex-shrink: 0;
+        flex-shrink: 1;
         flex-grow: 2;
         text-align: center;
     }
@@ -68,7 +68,7 @@
 
         .vertilize-col.answer-glyphicon {
             justify-content: right;
-            padding: 10px 6px 26px 0;
+            padding: 10px 6px 10px 6px;
         }
     }
 
